[package]
name = "hexar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hexar"
path = "src/controller.rs"

[[bin]]
name = "hexar-legacy"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
smallvec = { version = "1.14.0", features = ["serde"] }
env_logger = "0.11.5"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
thiserror = "1.0.69"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "0.8.19"

[dev-dependencies]
serialport = "4.6.0"